--- a/src/pages/Products/Products.module.css
+++ b/src/pages/Products/Products.module.css
@@ -12,11 +12,11 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    width: 100%;
     gap: 10px;
     flex-wrap: wrap;
     overflow: auto;
     padding: 10px 0;
-    max-width: 1250px;
 }
 
 @media (min-width: 40rem) {
